--- a/style.css
+++ b/style.css
@@ -58,7 +58,6 @@ body {
 .recipe_title h1 {
   color: var(--neutral-dark-charcoal);
   font-family: "Young Serif";
-  font-style: normal;
   font-weight: 400;
   font-size: 40px;
   line-height: 100%;
@@ -68,7 +67,6 @@ body {
 .recipe_description {
   color: var(--neutral-wenge-brown);
   font-family: "Outfit";
-  font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 150%;
@@ -79,17 +77,17 @@ body {
   border-radius: 12px;
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 16px;
   padding: 28px;
 }
 
-.preparation_time_title {
+.preparation_time_title h3 {
   color: var(--primary-dark-raspberry);
   font-family: "Outfit";
-  font-style: normal;
   font-weight: 600;
   font-size: 20px;
   line-height: 100%;
+  margin: 0;
 }
 
 ul,
@@ -99,20 +97,24 @@ ol {
 
 li {
   font-family: "Outfit";
-  font-style: normal;
   font-weight: 300;
   font-size: 16px;
   line-height: 150%;
   color: var(--neutral-wenge-brown);
 }
 
-.preparation_time_detail ul li::marker,
-.instructions_details ol li::marker {
+li:not(:last-child) {
+  padding-bottom: 8px;
+}
+
+.preparation_time_detail ul li::marker {
   color: var(--primary-dark-raspberry);
 }
 
-ul li::marker {
+ul li::marker,
+ol li::marker {
   color: var(--primary-nutmeg);
+  font-weight: 600;
 }
 
 .bold_list {
@@ -125,13 +127,13 @@ ul li::marker {
   gap: 24px;
 }
 
-.section_title {
+.section_title h2 {
   color: var(--primary-nutmeg);
   font-family: "Young Serif";
-  font-style: normal;
   font-weight: 400;
   font-size: 28px;
   line-height: 100%;
+  margin: 0;
 }
 
 .line_separation {
@@ -165,7 +167,6 @@ ul li::marker {
   width: 55%;
   color: var(--neutral-wenge-brown);
   font-family: "Outfit";
-  font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 150%;
@@ -174,8 +175,40 @@ ul li::marker {
 .table_line_values {
   color: var(--primary-dark-raspberry);
   font-family: "Outfit";
-  font-style: normal;
   font-weight: 600;
   font-size: 16px;
   line-height: 150%;
+}
+
+@media screen and (max-width: 420px) {
+  .card {
+    padding: 0;
+    min-width: 320px;
+  }
+  section {
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+  section:last-of-type {
+    padding-bottom: 40px;
+  }
+
+  .line_separation,
+  .recipe_preparation_section {
+    margin-left: 32px;
+    margin-right: 32px;
+  }
+
+  .recipe_preparation_section {
+    padding: 24px;
+  }
+  .top_image {
+    margin: 0;
+  }
+  .top_image img {
+    border-radius: 0px;
+  }
+  .recipe_title h1 {
+    font-size: 36px;
+  }
 }
